# ai-agent-ui

./: .gitignore  Apifox操作指南.md  README.md  UI自动化测试Agent需求文档.md  pom.xml  pyproject.toml  requirements.txt  测试工程师经验水准评估不足清单.md  高级研发视角架构不足分析.md
app/: __init__.py  app_factory.py  evidence.py  exceptions.py  id_generator.py  llm_agent.py  main.py  models.py  parser.py  reporting.py  runner.py  services.py  store.py
app/api/: dependencies.py  exception_handlers.py  schemas.py
app/api/routers/: __init__.py  config.py  documents.py  execution_tasks.py  parse_tasks.py
app/core/: __init__.py  config_service.py  container.py  logging.py  settings.py
app/domain/: __init__.py  events.py  models.py  repositories.py  state_machine.py
src/main/java/com/diancan/agent/: UiAutomationAgentApplication.java
src/main/java/com/diancan/agent/controller/: ConfigController.java  ExecutionTaskController.java  GlobalExceptionHandler.java  ParseTaskController.java  TestDocumentController.java
src/main/java/com/diancan/agent/domain/: BrowserType.java  ExecutionStatus.java  LogLevel.java  ParseStatus.java  ReviewAction.java  RunMode.java  TaskStatus.java
src/main/java/com/diancan/agent/dto/: ApiError.java  CaseReviewItem.java  ConfirmParseTaskRequest.java  CreateExecutionTaskRequest.java  CreateParseTaskRequest.java  CreateTaskResponse.java  UploadDocumentResponse.java
src/main/java/com/diancan/agent/model/: AssertionResult.java  (+8 more)
src/main/resources/: application.yml
tests/: test_app_factory.py  test_execution_service.py  test_llm_agent.py  test_parser.py  test_state_machine.py
(+10 files in other folders)
