[project]
name = "ai-agent-ui"
version = "0.1.0"
description = "Markdown driven UI automation test agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic>=2.7,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
